<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimeSchedule</string>
    <string name="action_settings">Settings</string>
    <string name="str_import_urgent">Import, Urgent</string>
    <string name="str_import_not_urgent">Import, Not Urgent</string>
    <string name="str_not_import_urgent">Not Import, Urgent</string>
    <string name="str_not_import_not_urgent">Not Import, Not Urgent</string>
    <string name="str_note">Note</string>
    <string name="str_save">Save</string>
    <string name="str_today">Today Task</string>
    <string name="str_plz_title">Please input title</string>
    <string name="str_year">Year</string>
    <string name="str_month">Month</string>
    <string name="str_day">Day</string>
    <string name="str_hour">Hour</string>
    <string name="str_min">Min</string>
    <string name="str_start_time">Start Time:</string>
    <string name="str_end_time">End Time:</string>
    <string name="str_self_profile">Settings</string>
    <string name="str_tucao">Tu Cao:</string>
    <string name="str_submit">Submit</string>
    <string name="str_enter_now">Enter Now</string>
</resources>
