<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    >

    <com.dreamfly.widget.WheelView
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/normal_inner_space"
        android:layout_marginEnd="@dimen/normal_inner_space"
        app:itemNumber="3"
        app:lineColor="@color/color_time_line"
        app:maskHight="@dimen/time_mask_height"
        app:noEmpty="true"
        app:normalTextColor="@color/color_time_unsel"
        app:normalTextSize="@dimen/time_normal_text"
        app:selectedTextColor="@color/color_time_sel"
        app:selectedTextSize="@dimen/time_select_text"
        app:unitHight="@dimen/time_unit_height"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_month"
        android:textSize="@dimen/time_normal_text"
        />

    <com.dreamfly.widget.WheelView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/normal_inner_space"
        android:layout_marginEnd="@dimen/normal_inner_space"
        app:itemNumber="3"
        app:lineColor="@color/color_time_line"
        app:maskHight="@dimen/time_mask_height"
        app:noEmpty="true"
        app:normalTextColor="@color/color_time_unsel"
        app:normalTextSize="@dimen/time_normal_text"
        app:selectedTextColor="@color/color_time_sel"
        app:selectedTextSize="@dimen/time_select_text"
        app:unitHight="@dimen/time_unit_height"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_day"
        android:textSize="@dimen/time_normal_text"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        />

    <com.dreamfly.widget.WheelView
        android:id="@+id/hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/normal_inner_space"
        app:itemNumber="3"
        app:lineColor="@color/color_time_line"
        app:maskHight="@dimen/time_mask_height"
        app:noEmpty="true"
        app:normalTextColor="@color/color_time_unsel"
        app:normalTextSize="@dimen/time_normal_text"
        app:selectedTextColor="@color/color_time_sel"
        app:selectedTextSize="@dimen/time_select_text"
        app:unitHight="@dimen/time_unit_height"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_hour"
        android:textSize="@dimen/time_normal_text"
        />

    <com.dreamfly.widget.WheelView
        android:id="@+id/minute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/normal_inner_space"
        android:layout_marginEnd="@dimen/normal_inner_space"
        app:itemNumber="3"
        app:lineColor="@color/color_time_line"
        app:maskHight="@dimen/time_mask_height"
        app:noEmpty="true"
        app:normalTextColor="@color/color_time_unsel"
        app:normalTextSize="@dimen/time_normal_text"
        app:selectedTextColor="@color/color_time_sel"
        app:selectedTextSize="@dimen/time_select_text"
        app:unitHight="@dimen/time_unit_height"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_min"
        android:textSize="@dimen/time_normal_text"
        />

</LinearLayout>