<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/normal_inner_space"
        android:layout_marginRight="@dimen/normal_inner_space"
        android:text="@string/str_start_time"
        android:textSize="@dimen/time_select_text"
        />

    <com.dreamfly.widget.TimePicker
        android:id="@+id/timepicker_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_start_time"
        android:layout_margin="@dimen/normal_inner_space"
        android:gravity="center_horizontal|top"
        />

    <ImageView
        android:id="@+id/line_middle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/timepicker_start"
        android:layout_margin="@dimen/normal_inner_space"
        android:background="@drawable/shape_rectangle_divider"/>

    <TextView
        android:id="@+id/txt_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_middle"
        android:layout_margin="@dimen/normal_inner_space"
        android:text="@string/str_end_time"
        android:textSize="@dimen/time_select_text"
        />

    <com.dreamfly.widget.TimePicker
        android:id="@+id/timepicker_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_end_time"
        android:layout_margin="@dimen/normal_inner_space"
        android:gravity="center_horizontal|top"
        />

    <ImageButton
        android:id="@+id/icon_back"
        android:layout_width="@dimen/button_little_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/normal_horizontal_margin"
        android:layout_marginTop="@dimen/normal_inner_space"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_arrow_back_black_36dp"
        android:background="@drawable/selector_back_btn"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/icon_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:layout_toRightOf="@id/icon_back"
        android:layout_alignBottom="@id/icon_back"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/normal_horizontal_margin"
        android:background="@drawable/selector_save_btn"
        android:text="@string/str_save"/>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/icon_back"
        android:layout_margin="@dimen/normal_inner_space"
        android:background="@drawable/shape_rectangle_divider"/>


</RelativeLayout>