<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dreamfly.timeschedule.view.widget.EditTextWithDel
        android:id="@+id/main_edit_task"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textedit_height"
        android:layout_marginStart="@dimen/normal_horizontal_margin"
        android:layout_marginEnd="@dimen/normal_horizontal_margin"
        android:layout_marginTop="@dimen/normal_vertical_margin"
        android:layout_marginBottom="@dimen/normal_vertical_margin"
        android:background="@drawable/main_edit_task"
        android:layout_gravity="center_vertical"
        android:paddingStart="@dimen/textedit_cursor_margin"
        android:paddingEnd="@dimen/textedit_cursor_margin"
        android:singleLine="true"
        />

    <ImageView
        android:id="@+id/line_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/normal_inner_space"
        android:layout_below="@id/main_edit_task"
        android:background="@drawable/shape_rectangle_divider"/>

    <TableLayout
        android:id="@+id/table_list_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_one"
        android:layout_margin="@dimen/normal_inner_space"
        >
        <TableRow>
            <LinearLayout
                android:id="@+id/ll_first_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/normal_inner_space"
                android:background="@drawable/shape_first_level_bg"
                >
                <CheckBox
                    android:id="@+id/cb_first_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomCheckBoxLitle"
                    android:layout_margin="@dimen/normal_inner_space"
                    android:clickable="false"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_inner_space"
                    android:layout_gravity="center_vertical"
                    android:text="@string/str_import_urgent"
                    android:textColor="@color/color_first_level"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@drawable/shape_second_level_bg">
                <CheckBox
                    android:id="@+id/cb_second_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomCheckBoxLitle"
                    android:layout_margin="@dimen/normal_inner_space"
                    android:clickable="false"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_inner_space"
                    android:layout_gravity="center_vertical"
                    android:text="@string/str_import_not_urgent"
                    android:textColor="@color/color_second_level"/>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/normal_inner_space">
            <LinearLayout
                android:id="@+id/ll_third_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/normal_inner_space"
                android:background="@drawable/shape_third_level_bg">
                <CheckBox
                    android:id="@+id/cb_third_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomCheckBoxLitle"
                    android:layout_margin="@dimen/normal_inner_space"
                    android:clickable="false"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_inner_space"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/color_third_level"
                    android:text="@string/str_not_import_urgent"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_fourth_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@drawable/shape_fourth_level_bg">
                <CheckBox
                    android:id="@+id/cb_fourth_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomCheckBoxLitle"
                    android:layout_margin="@dimen/normal_inner_space"
                    android:clickable="false"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_inner_space"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/color_fourth_level"
                    android:text="@string/str_not_import_not_urgent"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/line_two"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/table_list_task"
        android:layout_margin="@dimen/normal_inner_space"
        android:background="@drawable/shape_rectangle_divider"/>

    <LinearLayout
        android:id="@+id/alarm_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_two"
        android:layout_margin="@dimen/normal_inner_space"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm_black_36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/normal_inner_space"
            android:layout_marginEnd="@dimen/normal_inner_space"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_inner_space"
            android:layout_marginEnd="@dimen/normal_inner_space"
            android:layout_gravity="center_vertical"
            android:text="2015-09-26 01:32"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_inner_space"
            android:layout_marginEnd="@dimen/normal_inner_space"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_trending_flat_black_36dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_inner_space"
            android:layout_marginEnd="@dimen/normal_inner_space"
            android:layout_gravity="center_vertical"
            android:text="2015-09-26 01:32"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ly_function_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/normal_horizontal_margin"
        android:layout_marginEnd="@dimen/normal_horizontal_margin"
        android:layout_marginTop="@dimen/normal_inner_space"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >
        <ImageButton
            android:id="@+id/icon_back"
            android:layout_width="@dimen/button_little_width"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_black_36dp"
            android:background="@drawable/selector_back_btn"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <ImageButton
            android:id="@+id/icon_delete"
            android:layout_width="@dimen/button_little_width"
            android:layout_height="match_parent"
            android:src="@drawable/ic_delete_black_36dp"
            android:background="@drawable/selector_del_btn"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <Button
            android:id="@+id/icon_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/icon_back"
            android:layout_toStartOf="@id/icon_delete"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_save_btn"
            android:text="@string/str_save"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/line_three"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/ly_function_btn"
        android:layout_margin="@dimen/normal_inner_space"
        android:background="@drawable/shape_rectangle_divider"/>

    <com.dreamfly.timeschedule.view.widget.EditTextWithDel
        android:id="@+id/edit_notice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/alarm_notice"
        android:layout_above="@id/line_three"
        android:background="@drawable/main_edit_task"
        android:gravity="start|top"
        android:layout_margin="@dimen/normal_inner_space"
        android:padding="@dimen/textedit_cursor_margin"
        android:hint="@string/str_note"
        />

</RelativeLayout>